# Mathdoku-explorer

./: .gitignore  Cargo.toml  LICENSE  README.md  codecov.yml  rustfmt.toml  site.css
.githooks/: pre-commit
.github/workflows/: ci.yml  deploy-main.yml  pr-preview.yml
adr/: 0001-without-solution-mode.md  0002-wasm-web-preview.md  0004-trail-based-rollback.md  0005-memo-ownership.md  0006-collinear-distinctness-memo.md  0007-explorer-performance-test-bed.md
apps/designer/: Cargo.toml  README.md  index.html  styles.css
apps/designer/core/: Cargo.toml
apps/designer/core/src/: lib.rs
apps/designer/e2e/: .prettierignore  package.json  playwright.config.ts
apps/designer/e2e/tests/: cage_stats.test.ts  cell_mode.test.ts  filename_display.test.ts  grid_render.test.ts  helpers.ts  keys.ts  provisional_cage.test.ts  solution_count.test.ts  startup.test.ts  tab_navigation.test.ts  undo_redo.test.ts  without_solution.test.ts
apps/designer/e2e/tests-web/: editor_flow.test.ts  puzzle_menu_shortcuts.test.ts
apps/designer/src/: app.rs  cage_commit.rs  feasibility.rs  geometry.rs  ipc.rs  main.rs  partial_solution.rs  theme.rs  web_state.rs
apps/designer/src-tauri/: Cargo.toml  tauri.conf.json
apps/designer/src-tauri/src/: commands.rs  lib.rs  main.rs
apps/designer/src/components/: cage.rs  cage_stats.rs  cell.rs  mod.rs  operation_selector.rs  provisional_cage.rs  puzzle.rs  selection.rs  solution_count.rs
apps/designer/web-shell/: index.html
apps/explorer/: Cargo.toml  README.md
apps/explorer/examples/: solve_time_vs_n.yaml
apps/explorer/src/: app.rs  cli.rs  config.rs  error.rs  main.rs  output.rs  runner.rs  stats.rs  testutil.rs
apps/explorer/src/experiments/: mod.rs  solve_time.rs
main/: index.html  mathdoku-designer-ui-e691bf52580013f1.js  theme-eff0471e3197582e.css
mathdoku/: CHANGELOG.md  Cargo.toml
mathdoku-designer/: Cargo.toml  Trunk.toml  clippy.toml  index.html  styles.css
mathdoku-designer/e2e/: eslint.config.mjs  package-lock.json  playwright.config.ts  tsconfig.json
mathdoku-designer/e2e/tests/: cage_stats.test.ts  cell_mode.test.ts  filename_display.test.ts  grid_render.test.ts  helpers.ts  provisional_region.test.ts  slot_selection.test.ts  solution_count.test.ts  startup.test.ts  without_solution.test.ts
mathdoku-designer/shared/: Cargo.toml
mathdoku-designer/shared/src/: lib.rs
mathdoku-designer/src/: app.rs  cage_commit.rs  geometry.rs  ipc.rs  keys.rs  main.rs  partial_solution.rs  theme.rs
mathdoku-designer/src-tauri/: Cargo.toml  tauri.conf.json
mathdoku-designer/src-tauri/src/: commands.rs  lib.rs  main.rs
mathdoku-designer/src/components/: cage.rs  cage_stats.rs  cell.rs  mod.rs  operation_selector.rs  puzzle.rs  region.rs  selection.rs  solution_count.rs
mathdoku/src/: all_different.rs  arithmetic.rs  cache.rs  cage.rs  cell.rs  constraint.rs  cover.rs  csp.rs  error.rs  fill.rs  generate.rs  grid.rs  grid_csp.rs  latin_square.rs  lib.rs  mdd.rs  memo.rs  operation.rs  operator.rs  polyomino.rs  puzzle.rs  puzzle_csp.rs  regin.rs  slot.rs  solutions.rs  solver.rs  store.rs  table.rs  test_utils.rs  tuples.rs  types.rs  variable.rs
mathdoku/src/generator/: generate.rs  latin_square.rs  mod.rs
pr-10/: index.html  mathdoku-designer-ui-e691bf52580013f1_bg.wasm
pr-11/: index.html
pr-12/: index.html
pr-13/: index.html  styles-79a86cbb56f25bd.css
pr-8/: index.html
pr-9/: index.html
site/: index.html
try/: index.html
