[package]
name = "mathdoku"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
rust-version = "1.87"

[dependencies]
itertools = "0.14"
rand = "0.10.1"
serde = { version = "1", features = ["derive"] }
strum = { version = "0.28", features = ["derive"] }

[dev-dependencies]
rand_chacha = "0.10.0"
serde_json = "1"

# Does not yet opt in to `[lints] workspace = true`. The strict workspace policy
# (clippy::all/pedantic/nursery deny, unwrap_used/expect_used/panic deny, etc.)
# requires an error-handling cleanup pass tracked in #59. Until then this crate
# keeps only its local lint.
[lints.rust]
unused_results = "warn"
