[package]
name = "mathdoku"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
rust-version = "1.87"

[dependencies]
itertools = "0.14"
env_logger = "0.11"
log = "0.4"
rand = "0.10.1"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
rand_chacha = "0.10.0"
serde_json = "1"

[lints]
workspace = true
