[package]
name = "mathdoku-designer-ui"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[dependencies]
mathdoku-designer-core = { path = "core" }
leptos = { version = "0.8", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
gloo-timers = { version = "0.3", features = ["futures"] }
web-sys = { version = "0.3", features = ["Window", "Document", "Element", "HtmlElement", "HtmlSelectElement", "NodeList", "CssStyleDeclaration", "SvgElement"] }
mathdoku = { path = "../../mathdoku" }
# Enables the `wasm_js` backend for getrandom (pulled in transitively by
# `mathdoku`'s `rand` dep). Without this feature `getrandom` refuses to
# compile on wasm32-unknown-unknown.
getrandom = { version = "0.4", features = ["wasm_js"] }

[dev-dependencies]
serde_json = "1"

[lints]
workspace = true
