[package]
name = "mathdoku-designer"
version = "0.1.0"
description = "Mathdoku Designer"
authors = ["W.P. McNeill"]
edition = "2021"

[lib]
name = "mathdoku_designer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
mathdoku-designer-shared = { path = "../shared" }
tauri = { version = "2", features = ["image-png"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mathdoku = { path = "../../mathdoku" }
rand = "0.10"
thiserror = "2"

[dev-dependencies]
tauri = { version = "2", features = ["test"] }
