[package]
name = "mathdoku-designer-core"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[dependencies]
mathdoku = { path = "../../../mathdoku" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.10"
thiserror = "2"

# On wasm, getrandom (pulled in transitively by `mathdoku`'s `rand` dep) needs
# its `wasm_js` backend; without this feature it refuses to compile for
# wasm32-unknown-unknown. Native targets are unaffected.
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.4", features = ["wasm_js"] }

[lints]
workspace = true
