[package]
name = "mathdoku-designer-tauri"
version = "0.1.0"
description = "Mathdoku Designer"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[lib]
name = "mathdoku_designer_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
mathdoku-designer-core = { path = "../core" }
tauri = { version = "2", features = ["image-png"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mathdoku = { path = "../../../mathdoku" }
rand = "0.10"

[dev-dependencies]
tauri = { version = "2", features = ["test"] }

[lints]
workspace = true
